src/types/tests/snapshots/tgbot__types__tests__checklist__input_checklist_task-3.snap
---
source: src/types/tests/checklist.rs
expression: "expected_struct.with_text_entities([TextEntity::bold(0..2)])"
---
{
  "id": 1,
  "text": "test",
  "text_entities": [
    {
      "offset": 0,
      "length": 2,
      "type": "bold"
    }
  ]
}
